chatbot.js and index.html

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
             <div class="options"></div>
           `;
           optionsDiv = document.querySelector('.options');
-          sendMessage('start');
+          sendMessage('Hello');
           return;
         }
 
@@ -112,11 +112,12 @@
         <div class="options"></div>
       `;
       optionsDiv = document.querySelector('.options');
-      sendMessage('start');
+      sendMessage('Hello');
+      sendMessage('Clear Chat');
     };
 
-    // Start the bot
-    sendMessage('start');
+    // Start the bot 
+    sendMessage('Hello');
   </script>
 </body>
 </html>
